--- a/正则.md
+++ b/正则.md
@@ -242,6 +242,12 @@ aa<div>test1</div>bb<div>test2</div>cc
 
 可以使用非捕获元字符```?:```、```?=```或```?!```来重写捕获，忽略对相关匹配的保存
 
+### RegExp.$xx
+
+RegExp这个对象会在我们调用了正则表达式的方法后, 自动将最近一次的结果保存在里面
+
+所以如果我们在使用正则表达式时, 有用到分组，那么就可以直接在调用完以后直接使用RegExp.$xx来使用捕获到的分组内容
+
 ### 找出连续相同的值
 
 例如，在正则```(.+)\1```中，```\1```等于```(.+)```中匹配到的值，也就是连续2次相同的值
