--- a/闭包.md
+++ b/闭包.md
@@ -18,7 +18,7 @@
 
 闭包就是由函数创造的一个词法作用域，里面创建的变量被引用后，可以在这个词法环境之外自由使用
 
-当一个函数持有外部环境的变量时，就形成了闭包
+更通俗地说，当一个函数能够读取其他函数的内部变量，就发生了闭包
 
 ```javascript
 let a = 1
@@ -37,9 +37,9 @@ let b = function(){
 
 ## 闭包的作用
 
-闭包通常用来创建内部变量，使得这些变量不能被外部随意修改
+闭包通常用来创建内部变量，使得这些变量不能被外部随意修改，同时又可以通过指定的函数接口来操作
 
-同时又可以通过指定的函数接口来操作
+另一个就是让这些变量的值始终保持在内存中
 
 ---
 
@@ -47,26 +47,38 @@ let b = function(){
 
 ## 闭包的实现
 
+### 常见的实现方法
+
 最常见的实现方式就是函数包函数
 
 被包的函数中使用了包裹函数的变量
 
 然后return被包的函数
 
-例如：
+### 例子
 
 ```javascript
-function foo(){
-  var local = 1
-  function bar(){
-    local++
-    return local
-  }
-  return bar
+let nAdd = () => n+=1
+let f1 = () => {
+  let n = 999;
+  let f2 = () => alert(n);
+
+  return f2;
 }
+
+let result=f1();
+result(); // 999
+nAdd();
+result(); // 1000
 ```
 
-上述例子中，bar与local就形成了闭包
+上述例子中，f1与f2就形成了闭包
+
+### 闭包引用的局部变量不会马上被回收
+
+在上述例子中，函数f1中的局部变量n一直保存在内存中，并没有在f1调用后被自动清除
+
+原因就在于f1是f2的父函数，而f2被赋给了一个全局变量，这导致f2始终在内存中，而f2的存在依赖于f1，因此f1也始终在内存中，不会在调用结束后，被垃圾回收机制回收
 
 ---
 
