--- a/闭包.md
+++ b/闭包.md
@@ -37,9 +37,9 @@ let b = function(){
 
 ## 闭包的作用
 
-闭包通常用来创建内部变量，使得这些变量不能被外部随意修改，同时又可以通过指定的函数接口来操作
+1. 闭包通常用来创建内部变量，使得这些变量不能被外部随意修改，同时又可以通过指定的函数接口来操作
 
-另一个就是让这些变量的值始终保持在内存中
+2. 如果有需要，可以（注意不是必定）让这些变量的值始终保持在内存中
 
 ---
 
@@ -74,11 +74,13 @@ result(); // 1000
 
 上述例子中，f1与f2就形成了闭包
 
-### 闭包引用的局部变量不会马上被回收
+### 让变量的值始终保持在内存中
 
 在上述例子中，函数f1中的局部变量n一直保存在内存中，并没有在f1调用后被自动清除
 
 原因就在于f1是f2的父函数，而f2被赋给了一个全局变量，这导致f2始终在内存中，而f2的存在依赖于f1，因此f1也始终在内存中，不会在调用结束后，被垃圾回收机制回收
+
+当然，如果没有f2被赋给一个全局变量这一步，则n还是会被自动清除
 
 ---
 
