--- a/原型和继承.md
+++ b/原型和继承.md
@@ -4,43 +4,67 @@
 
 [为什么需要原型](#jump1)
 
-[原型对象prototype](#jump2)
+[几个重要的规则](#jump2)
 
-[对象原型__proto__](#jump3)
+[原型对象：prototype](#jump3)
 
-[原型链](#jump4)
+[对象的原型：__proto__](#jump4)
 
-[扩展内置对象](#jump5)
+[原型链](#jump5)
 
-[](#jump5)
+[继承](#jump6)
 
-[](#jump5)
+[扩展内置对象](#jump7)
 
----	
+---
 
 <span id="jump1"></span>
 
 ## 为什么需要原型
 
-同一个类的不同对象中会有相同的方法
-
-例如：ldh和zxy都是类Star的对象实例，它们中有共同的方法ldh.sing和zxy.sing
+同一个类的不同对象中会有相同的方法，例如：ldh和zxy都是类Star的对象实例，它们中有共同的方法ldh.sing和zxy.sing
 
 但创建对象实例时，构造函数并不会复用这些方法而是分别开辟内存空间
 
-因此可以把那些不变的方法直接定义在类的构造函数的prototype对象上
-
-这样所有这个类的对象实例就可以共享这些方法
+因此可以把那些不变的方法直接定义在类的构造函数的prototype对象上，这样所有这个类的对象实例就可以共享这些方法
 		
 ---
 
 <span id="jump2"></span>
 
-## 原型对象prototype
+## 几个重要的规则
+
+### 4个概念
+
+1. js分为函数对象和普通对象，每个对象都有__proto__属性，但是只有函数对象才有prototype属性
+
+2. Object、Function都是js内置的函数, 类似的还有我们常用到的Array、RegExp、Date、Boolean、Number、String
+
+3. 属性__proto__是一个对象，它有两个属性，constructor和__proto__
+
+4. 原型对象prototype有一个默认的constructor属性，用于记录实例是由哪个构造函数创建
+
+### 2个准则
+
+1. 原型对象（即Person.prototype）的constructor指向构造函数本身
+
+2. 对象的实例（即person01）的__proto__和原型对象指向同一个地方
+
+---	
+
+<span id="jump3"></span>
+
+## 原型对象：prototype
 
 ### 概念
 
-```prototype```是构造函数默认生成的一个内置对象，其作用是共享方法
+prototype是构造函数默认生成的一个内置对象，它是函数独有的属性
+
+prototype属性可以看成是一块特殊的存储空间，存储了供“徒弟”、“徒孙”们使用的方法和属性
+
+prototype设计之初就是为了实现继承，让某一个构造函数实例化的所有对象可以找到公共的方法和属性
+
+有了prototype我们不需要为每一个实例创建重复的属性方法，而是将属性方法创建在构造函数的原型对象上，那些不需要共享的才创建在构造函数中
 
 ### 定义公共属性与公共方法的区别
 	
@@ -58,13 +82,19 @@ Star.prototype.sing = function() {
 
 ---
 
-<span id="jump3"></span>
+<span id="jump4"></span>
 
-## 对象原型__proto__
+## 对象的原型：__proto__
 
 ### 概念
 
-对象实例身上有一个```__proto__```，它指向构造函数的原型对象```prototype```
+对象实例身上有一个```__proto__```，它的含义就是告诉我们一个对象的原型对象是谁
+
+构造函数的原型对象上的属性和方法就是通过```__proto__```属性，才能与构造函数的实例联系在一起的
+
+```__proto__```属性相当于通往```prototype```唯一的路（指针）
+
+让“徒弟”、“徒孙” 们找到自己“师父”、“师父的师父” 提供给自己的方法和属性
 
 ### 查找一个方法的顺序
 
@@ -82,9 +112,11 @@ Star.prototype.sing = function() {
 
 ---
 
-<span id="jump4"></span>
+<span id="jump5"></span>
 
 ## 原型链
+
+### 图示
 
 原型链上各个对象间的关系及指向如下图所示：
 
@@ -111,16 +143,16 @@ Star.prototype.sing = function() {
    |           |---------------------------------->|   Star    |
    |  构造函数 |<----------------------------------|  原型对象 |
    |   Star    |  通过Star.prototye.consructor指回 | prototype |
-    -----------				            -----------  
-	         \				  /\
-         通过调用 \				 /
-	  Star创建 \			        / 通过ldh.__proto__指向
-		    \			       /
-		     \	     -----------      /
-		      \/    |           |    /
-			    |    ldh    |
-			    |  对象实例 |
-			     -----------
+    -----------	__			            -----------  
+	      \	\			         /\
+      通过调用 \ \ 通过ldh.consructor指回		 /
+       Star创建 \ \			        / 通过ldh.__proto__指向
+		 \ \			       /
+		  \ \ 	   -----------     /
+		 __\ \    |           |   /
+			  |    ldh    |
+			  |  对象实例 |
+			   -----------
 ```
 
 即当访问一个对象的属性（方法）时，按照：
@@ -129,27 +161,7 @@ Star.prototype.sing = function() {
 对象自身——>对象的原型对象——>Object的原型对象——>null
 ```
 
----
-
-<span id="jump5"></span>
-
-## 扩展内置对象
-
-可以通过原型对象，对原来的内置对象进行扩展自定义的方法
-
-注意，不能给原型对象覆盖操作：
-
-```javascript
-Array.prototype = {xx: function() {}}
-```
-
-只能是：
-
-```javascript
-Array.prototype.xx = function() {}
-
-```
-
+由上图还可以得知，其他内置函数对象的原型对象（例如：```Array.prototype```）和自定义构造函数的```__proto__```都指向```Object.prototype```, 因为原型对象```prototype```本身是普通对象
 
 ---
 
@@ -207,4 +219,25 @@ var son = new Son('刘德华', 18);
 ```javascript
 Son.prototype = new Father();
 Son.prototype.constructor = Son;
+```
+
+---
+
+<span id="jump7"></span>
+
+## 扩展内置对象
+
+可以通过原型对象，对原来的内置对象进行扩展自定义的方法
+
+注意，不能给原型对象覆盖操作：
+
+```javascript
+Array.prototype = {xx: function() {}}
+```
+
+只能是：
+
+```javascript
+Array.prototype.xx = function() {}
+
 ```
