--- a/原型和继承.md
+++ b/原型和继承.md
@@ -121,38 +121,38 @@ Star.prototype.sing = function() {
 原型链上各个对象间的关系及指向如下图所示：
 
 ```
-							       -----------  
-							      |           |
-							      |   null    |
-							      |           |
-							       -----------
-								  /\
-								 /
-								/ 通过Object原型对象Object.prototype.__proto__指向
-							       /
-	    -----------       通过Object.prototype指向        -----------                       
-	   |	       |------------------------------------>|  Object   |
-	   |  Object   |<------------------------------------|  原型对象 |
-	   |  构造函数 |  通过Object.prototye.consructor指回 | prototype |
-	    -----------			    	              -----------  
-							     /\
-							    /
-							   / 通过Stra原型对象Star.prototye.__proto__指向
-							  /
+							    -----------  
+							   |           |
+							   |   null    |
+							   |           |
+							    -----------
+							    /\
+           通过Object原型对象Object.prototype.__proto__指向/
+	                                                  / 
+							 /
+       -----------       通过Object.prototype指向        -----------                       
+      |	          |------------------------------------>|  Object   |
+      |  Object   |<------------------------------------|  原型对象 |
+      |  构造函数 |  通过Object.prototye.consructor指回 | prototype |
+       -----------			    	         -----------  
+						       /\
+	   通过Stra原型对象Star.prototye.__proto__指向/
+	                                             / 
+						    /
     -----------      通过Start.prototype指向        -----------                       
    |           |---------------------------------->|   Star    |
    |  构造函数 |<----------------------------------|  原型对象 |
    |   Star    |  通过Star.prototye.consructor指回 | prototype |
-    -----------	__			            -----------  
-	      \	\			         /\
-      通过调用 \ \ 通过ldh.consructor指回		 /
-       Star创建 \ \			        / 通过ldh.__proto__指向
-		 \ \			       /
-		  \ \ 	   -----------     /
-		 __\ \    |           |   /
-			  |    ldh    |
-			  |  对象实例 |
-			   -----------
+    -----------	  __			            -----------  
+	        \ \			          /\
+        通过调用 \ \ 		                 /
+         Star创建 \ \ 通过ldh.consructor指回    / 通过ldh.__proto__指向
+		   \ \			       /
+		    \ \	     -----------      /
+		  __ \ \    |           |    /
+			    |    ldh    |
+			    |  对象实例 |
+			     -----------
 ```
 
 即当访问一个对象的属性（方法）时，按照：
