--- a/原型和继承.md
+++ b/原型和继承.md
@@ -10,11 +10,13 @@
 
 [对象的原型：__proto__](#jump4)
 
-[原型链](#jump5)
+[构造函数：constructor](#jump5)
 
-[继承](#jump6)
+[原型链](#jump6)
 
-[扩展内置对象](#jump7)
+[继承](#jump7)
+
+[扩展内置对象](#jump8)
 
 ---
 
@@ -58,13 +60,17 @@
 
 ### 概念
 
-prototype是构造函数默认生成的一个内置对象，它是函数独有的属性
-
 prototype属性可以看成是一块特殊的存储空间，存储了供“徒弟”、“徒孙”们使用的方法和属性
+
+prototype是构造函数默认生成的一个内置对象，它是函数独有的属性
 
 prototype设计之初就是为了实现继承，让某一个构造函数实例化的所有对象可以找到公共的方法和属性
 
 有了prototype我们不需要为每一个实例创建重复的属性方法，而是将属性方法创建在构造函数的原型对象上，那些不需要共享的才创建在构造函数中
+
+### 各级prototype的指向
+
+![指向](https://raw.githubusercontent.com/FooderLeoYo/JS-StudyNote/master/assets/imgs/prototype.png)
 
 ### 定义公共属性与公共方法的区别
 	
@@ -88,13 +94,13 @@ Star.prototype.sing = function() {
 
 ### 概念
 
+让“徒弟”、“徒孙” 们找到自己“师父”、“师父的师父” 提供给自己的方法和属性
+
 对象实例身上有一个```__proto__```，它的含义就是告诉我们一个对象的原型对象是谁
 
 构造函数的原型对象上的属性和方法就是通过```__proto__```属性，才能与构造函数的实例联系在一起的
 
 ```__proto__```属性相当于通往```prototype```唯一的路（指针）
-
-让“徒弟”、“徒孙” 们找到自己“师父”、“师父的师父” 提供给自己的方法和属性
 
 ### 查找一个方法的顺序
 
@@ -110,15 +116,41 @@ Star.prototype.sing = function() {
 
 则必须手动的利用```constructor```指回原来的构造函数
 
+### 各级__proto__的指向
+
+![指向](https://github.com/FooderLeoYo/JS-StudyNote/blob/master/assets/imgs/__protyo__.png?raw=true)
+
 ---
 
 <span id="jump5"></span>
+
+## 构造函数：constructor
+
+### 概念
+
+constructor属性是让“徒弟”、“徒孙” 们知道是谁创造了自己
+
+constructor是对象才有的属性，它是从一个对象指向一个函数的，指向的函数就是该对象的构造函数
+
+构造函数的constructor指向Function，Function的constructor指回自己，因为Function就是根构造函数
+
+### 各级constructor的指向
+
+![指向](https://github.com/FooderLeoYo/JS-StudyNote/blob/master/assets/imgs/constructor.png?raw=true)
+
+---
+
+<span id="jump6"></span>
 
 ## 原型链
 
 ### 图示
 
 原型链上各个对象间的关系及指向如下图所示：
+
+![完整的原型链](https://raw.githubusercontent.com/FooderLeoYo/JS-StudyNote/master/assets/imgs/%E5%AE%8C%E6%95%B4%E5%8E%9F%E5%9E%8B%E9%93%BE.png)
+
+（原始手绘笔记，不舍得删(o￣ヘ￣o)）
 
 ```
 							    -----------  
@@ -165,7 +197,7 @@ Star.prototype.sing = function() {
 
 ---
 
-<span id="jump6"></span>
+<span id="jump7"></span>
 
 ## 继承
 
@@ -223,7 +255,7 @@ Son.prototype.constructor = Son;
 
 ---
 
-<span id="jump7"></span>
+<span id="jump8"></span>
 
 ## 扩展内置对象
 
