--- a/正则.md
+++ b/正则.md
@@ -2,43 +2,42 @@
 
 ## 目录
 
-[正则表达式在JS中的使用](#jump1)
+[创建正则表达式](#jump1)
 
-[普通字符](#jump2)
+[正则表达式的方法](#jump2)
 
-[非打印字符](#jump3)
+[普通字符](#jump3)
 
-[特殊字符](#jump4)
+[非打印字符](#jump4)
 
-[限定符](#jump5)
+[特殊字符](#jump5)
 
-[定位符](#jump6)
+[限定符](#jump6)
 
-[?=、?<=、?!、?<!= 的使用区别](#jump7)
+[定位符](#jump7)
 
-[反向引用](#jump8)
+[?=、?<=、?!、?<!= 的使用区别](#jump8)
 
-[修饰符（标记）](#jump9)
+[反向引用](#jump9)
 
-[运算符优先级](#jump10)
+[修饰符（标记）](#jump10)
 
-[正则表达式中的替换](#jump11)
+[运算符优先级](#jump11)
 
 ---	
 
 <span id="jump1"></span>
 
-## 正则表达式在JS中的使用
+## 创建正则表达式
 
-### 创建正则表达式的方法
 		
-1. 利用字面量创建(最常用)
+### 利用字面量创建(最常用)
 
 ```javascript
 let 变量名 = /表达式/;
 ```
 
-2. 利用 RegExp对象来创建
+### 利用 RegExp对象来创建
 
 ```javascript
 let 变量名 = new RegExp(/表达式/);
@@ -46,17 +45,39 @@ let 变量名 = new RegExp(/表达式/);
 
 **注意：**正则表达式里面不需要加引号，不管是数字型还是字符串型
 
-### test方法
-
-用来检测字符串是否符合正则表达式要求的规范，返回布尔值
-
-```javascript
-正则变量.test(输入的内容)
-```
-
 ---
 
 <span id="jump2"></span>
+
+## 正则表达式的方法
+
+### exec
+
+一个在字符串中执行查找匹配的 RegExp 方法，它返回一个数组（未匹配到则返回 null）
+ 
+### test
+
+用来检测字符串是否符合正则表达式要求的规范，返回布尔值
+
+### match
+
+一个在字符串中执行查找匹配的 String 方法，它返回一个数组或者在未匹配到时返回 null
+
+### search
+
+一个在字符串中测试匹配的 String 方法，它返回匹配到的位置索引，或者在失败时返回-1
+
+### replace
+
+一个在字符串中执行查找匹配的 String 方法，并且使用替换字符串替换掉匹配到的子字符串
+
+### split
+
+一个使用正则表达式或者一个固定字符串分隔一个字符串，并将分隔后的子字符串存储到数组中的 String 方法
+
+---
+
+<span id="jump3"></span>
 
 ## 普通字符
 
@@ -75,7 +96,7 @@ let 变量名 = new RegExp(/表达式/);
 
 ---
 
-<span id="jump3"></span>
+<span id="jump4"></span>
 
 ## 非打印字符
 
@@ -92,7 +113,7 @@ let 变量名 = new RegExp(/表达式/);
 
 ---
 
-<span id="jump4"></span>
+<span id="jump5"></span>
 
 ## 特殊字符
 
@@ -110,7 +131,7 @@ let 变量名 = new RegExp(/表达式/);
 
 ---
 
-<span id="jump5"></span>
+<span id="jump6"></span>
 
 ## 限定符
 
@@ -167,7 +188,7 @@ aa<div>test1</div>bb<div>test2</div>cc
 
 ---
 
-<span id="jump6"></span>
+<span id="jump7"></span>
 
 ## 定位符
 
@@ -206,7 +227,7 @@ aa<div>test1</div>bb<div>test2</div>cc
 
 ---
 
-<span id="jump7"></span>
+<span id="jump8"></span>
 
 ## ?=、?<=、?!、?<!=的使用区别
 
@@ -228,7 +249,7 @@ aa<div>test1</div>bb<div>test2</div>cc
 
 ---
 
-<span id="jump8"></span>
+<span id="jump9"></span>
 
 ## 反向引用
 
@@ -286,7 +307,7 @@ for (let i = 0; i < arr.length ; i++) {
 
 ---
 
-<span id="jump9"></span>
+<span id="jump10"></span>
 
 ## 修饰符（标记）
 
@@ -306,7 +327,7 @@ for (let i = 0; i < arr.length ; i++) {
 
 ---
 
-<span id="jump10"></span>
+<span id="jump11"></span>
 
 ## 运算符优先级
 
@@ -321,26 +342,3 @@ for (let i = 0; i < arr.length ; i++) {
 | (), [] | 圆括号和方括号 |
 | ^, $, \任何元字符、任何字符 | 定位点和序列（即：位置和顺序） |
 | \| | "或"操作 |
-
----
-
-<span id="jump11"></span>
-
-## 正则表达式中的替换
-
-### replace方法
-
-可以实现字符串替换操作，同样也可以是正则表达式，返回值是一个新字符串
-
-```javascript
-字符串.replace(正则表达式或字符串, 替换成的字符串)
-
-```
-
-### 应用场景
-
-屏蔽敏感词，例如：
-
-```javascript
-div.innerHTML = text.value.replace(/激情|gay/g, '**'); // 将所有的“激情”和“gay”都换成“**”
-```
