--- a/函数.md
+++ b/函数.md
@@ -1,16 +1,12 @@
-# º¯Êı
+# å‡½æ•°
 
-## Ä¿Â¼
+## ç›®å½•
 
 [Execution context](#jump1)
 
 [Scope](#jump2)
 
-[Closure](#jump3)
-
-[¹¹Ôìº¯Êı£¬new Ê±·¢ÉúÁËÊ²Ã´](#jump4)
-
-[µ÷ÓÃº¯ÊıÓĞÄÄ¼¸ÖÖ·½Ê½](#jump5)
+[Scope Chain](#jump3)
 
 ---	
 
@@ -18,14 +14,14 @@
 
 ## Execution context
 
-### Ê²Ã´ÊÇÖ´ĞĞÉÏÏÂÎÄ
+### ä»€ä¹ˆæ˜¯æ‰§è¡Œä¸Šä¸‹æ–‡
 
 Is an abstract concept of the environment in which JavaScript code is executed
 
 
 It contains the ```variables```, ```function declarations```, ```arguments```, ```scope chain```, ```this``` and other information in the current execution environment
 
-### ·ÖÀà
+### åˆ†ç±»
 
 #### Global execution context
 
@@ -41,11 +37,11 @@ Whenever a function is called, a new context will be created for this function
 
 #### Eval Function Execution Context
 
-¿ª·¢Õß²¢²»¾­³£Ê¹ÓÃ eval£¬ËùÒÔÔÚÕâÀï²»ÔÙÌÖÂÛ
+å¼€å‘è€…å¹¶ä¸ç»å¸¸ä½¿ç”¨ evalï¼Œæ‰€ä»¥åœ¨è¿™é‡Œä¸å†è®¨è®º
 
 ### Execution stack
 
-Also known as ¡°call stack¡± 
+Also known as â€œcall stackâ€ 
 
 It is used to store all execution contexts created when the code is run
 
@@ -95,7 +91,7 @@ The execution context is popped out of the stack and recycled by the garbage col
 
 ## Scope
 
-### ¶¨Òå
+### å®šä¹‰
 
 The current context of execution
 
@@ -103,7 +99,7 @@ Scope likes an independent territory so that variables will not be leaked or exp
 
 The role of scope is to isolate variables, and variables with the same name under different scopes will not conflict
 
-### ·ÖÀà
+### åˆ†ç±»
 
 ### Global scope
 
@@ -121,17 +117,17 @@ Generally speaking, the following situations have global scope:
 
 Scope of variables declared inside the function
 
-```×¢Òâ£º```¿éÓï¾ä£¨´óÀ¨ºÅ¡°£û£ı¡±ÖĞ¼äµÄÓï¾ä£©£¬Èç if Ìõ¼şÓï¾ä»ò for Ñ­»·Óï¾ä£¬²»»á´´½¨Ò»¸öĞÂµÄ×÷ÓÃÓò
+```æ³¨æ„ï¼š```å—è¯­å¥ï¼ˆå¤§æ‹¬å·â€œï½›ï½â€ä¸­é—´çš„è¯­å¥ï¼‰ï¼Œå¦‚ if æ¡ä»¶è¯­å¥æˆ– for å¾ªç¯è¯­å¥ï¼Œä¸ä¼šåˆ›å»ºä¸€ä¸ªæ–°çš„ä½œç”¨åŸŸ
 
 ```javascript
 if (true) {
-    // 'if' Ìõ¼şÓï¾ä¿é²»»á´´½¨Ò»¸öĞÂµÄ×÷ÓÃÓò
-    var name = 'Hammad'; // name ÒÀÈ»ÔÚÈ«¾Ö×÷ÓÃÓòÖĞ
+    // 'if' æ¡ä»¶è¯­å¥å—ä¸ä¼šåˆ›å»ºä¸€ä¸ªæ–°çš„ä½œç”¨åŸŸ
+    var name = 'Hammad'; // name ä¾ç„¶åœ¨å…¨å±€ä½œç”¨åŸŸä¸­
 }
 console.log(name); // logs 'Hammad'
 ```
 
-### Block scope£¨ES6£©
+### Block scopeï¼ˆES6ï¼‰
 
 Block-level scope can be declared by ```let``` and ```const```
 
@@ -149,9 +145,13 @@ The declared variable cannot be accessed outside the scope of the specified bloc
 
 - No duplicate claims
 
-### Scope Chain
+---
 
-#### Free variable
+<span id="jump3"></span>
+
+## Scope Chain
+
+### Free variable
 
 Variables that are not defined in the current scope are called ```free variables```
 
@@ -159,13 +159,13 @@ Variables that are not defined in the current scope are called ```free variables
 var a = 100
 function fn() {
     var b = 200
-    console.log(a) // ÕâÀïµÄaÔÚÕâÀï¾ÍÊÇÒ»¸ö×ÔÓÉ±äÁ¿
+    console.log(a) // è¿™é‡Œçš„aåœ¨è¿™é‡Œå°±æ˜¯ä¸€ä¸ªè‡ªç”±å˜é‡
     console.log(b)
 }
 fn()
 ```
 
-#### Scope Chain
+### Scope Chain
 
 Is the process of finding the value of a free variable, argument or function
 
@@ -173,11 +173,11 @@ The JS engine scans for the value of the variable, argument or function layer by
 
 This layer-by-layer relationship is the scope chain
 
-#### About the value of free variables
+### About the value of free variables
 
 Go to the scope where the ```fn``` function was created, no matter where the ```fn``` function will be called
 
-Àı1£º
+ä¾‹1ï¼š
 
 ```javascript
 var x = 10
@@ -187,14 +187,14 @@ function fn() {
 function show(f) {
   var x = 20
   (function() {
-    f() // 10£¬¶ø²»ÊÇ20
+    f() // 10ï¼Œè€Œä¸æ˜¯20
   })()
 }
 
 show(fn)
 ```
 
-Àı2£º
+ä¾‹2ï¼š
 
 ```javascript
 var a = 10
@@ -211,86 +211,12 @@ var x = fn(),
 x() 
 ```
 
-·ÖÎö£º
+åˆ†æï¼š
 
-fn()·µ»ØµÄÊÇbarº¯Êı£¬Ö´ĞĞx()£¬¼´Ö´ĞĞbarº¯Êı´úÂë
+fn()è¿”å›çš„æ˜¯barå‡½æ•°ï¼Œæ‰§è¡Œx()ï¼Œå³æ‰§è¡Œbarå‡½æ•°ä»£ç 
 
-Òò´ËÈ¡bµÄÖµÊ±£¬Ö±½ÓÔÚfn×÷ÓÃÓòÈ¡
+å› æ­¤å–bçš„å€¼æ—¶ï¼Œç›´æ¥åœ¨fnä½œç”¨åŸŸå–
 
-È¡aµÄÖµÊ±£¬ÊÔÍ¼ÔÚfn×÷ÓÃÓòÈ¡£¬µ«ÊÇÈ¡²»µ½£¬Ö»ÄÜ×ªÏò´´½¨fnµÄÄÇ¸ö×÷ÓÃÓòÖĞÈ¥²éÕÒ
+å–açš„å€¼æ—¶ï¼Œè¯•å›¾åœ¨fnä½œç”¨åŸŸå–ï¼Œä½†æ˜¯å–ä¸åˆ°ï¼Œåªèƒ½è½¬å‘åˆ›å»ºfnçš„é‚£ä¸ªä½œç”¨åŸŸä¸­å»æŸ¥æ‰¾
 
-ËùÒÔ×îºóµÄ½á¹ûÊÇ30
-
----
-
-<span id="jump3"></span>
-
-## Closure
-
-[±Õ°üÑ§Ï°±Ê¼Ç](https://github.com/FooderLeoYo/JS-StudyNote/blob/master/%E9%97%AD%E5%8C%85.md)
-
----
-
-<span id="jump4"></span>
-
-## Ö´ĞĞ¹¹Ôìº¯Êı£¬newÊ±·¢ÉúÁËÊ²Ã´
-
-### ·¢ÉúÁËÊ²Ã´
-
-µ±Ö´ĞĞ```let o = new Foo();```Ê±£¬Êµ¼ÊÉÏÖ´ĞĞÁËÈçÏÂ²Ù×÷£º
-
-1. Create a new object obj
-
-```javascript
-let o = {};
-let [Foo, ...args] = [...arguments];  // µÚÒ»¸ö²ÎÊıÊÇ¹¹Ôìº¯Êı
-```
-
-2. Prototype chain connection: point the ```proto``` of this empty object to the ```prototype``` of the function 
-
-```javascript
-o.__proto__ = Foo.prototype;
-```
-
-3. Replace the ```this``` pointer of the function with o, and add the properties and methods of the constructor to this new empty object
-
-```javascript
-let result = Foo.apply(o, args);
-```
-
-4. If the result returned by the constructor is an object, return this object; otherwise return the created new object
-
-```javascript
-if(result && (typeof result == "object" || typeof result == "function")){
-  // Èç¹û¹¹Ôìº¯Êı·µ»ØµÄ½á¹ûÊÇÒ»¸ö¶ÔÏó£¬¾Í·µ»ØÕâ¸ö¶ÔÏó
-  return result;
-}
-// Èç¹û¹¹Ôìº¯Êı·µ»ØµÄ²»ÊÇÒ»¸ö¶ÔÏó£¬¾Í·µ»Ø´´½¨µÄĞÂ¶ÔÏó¡£
-return o;
-```
-
-### ÀàËÆµÄÎÊÌâ£ºÈçºÎÊµÏÖÒ»¸ö new
-
-```javascript
-function _new(func, ...args) {
-  let obj = Object.create(func.prototype); // Ô­ĞÍ
-  let res = func.apply(obj, args); // ³õÊ¼»¯¶ÔÏóÊôĞÔ
-  return res instanceof Object ? res : obj; // ·µ»ØÖµ
-}
-```
-
----
-
-<span id="jump5"></span>
-
-## µ÷ÓÃº¯ÊıÓĞÄÄ¼¸ÖÖ·½Ê½
-
-- ·½·¨µ÷ÓÃÄ£Ê½ Foo.foo(arg1, arg2);
-
-- º¯Êıµ÷ÓÃÄ£Ê½ foo(arg1, arg2);
-
-- ¹¹ÔìÆ÷µ÷ÓÃÄ£Ê½ (new Foo())(arg1, arg2);
-
-- call/apply µ÷ÓÃÄ£Ê½ Foo.foo.call(that, arg1, arg2);
-
-- bind µ÷ÓÃÄ£Ê½ Foo.foo.bind(that)(arg1, arg2)();
+æ‰€ä»¥æœ€åçš„ç»“æœæ˜¯30
