--- a/函数.md
+++ b/函数.md
@@ -4,9 +4,19 @@
 
 [Execution context](#jump1)
 
-[Scope](#jump2)
+[Execution stack](#jump2)
 
-[Scope Chain](#jump3)
+[变量对象](#jump3)
+
+[Scope](#jump4)
+
+[Scope Chain](#jump5)
+
+[this](#jump6)
+
+[JS程序执行的流程](#jump7)
+
+[](#jump)
 
 ---	
 
@@ -14,12 +24,17 @@
 
 ## Execution context
 
-### 什么是执行上下文
+### 定义
 
-Is an abstract concept of the environment in which JavaScript code is executed
+当 JavaScript 代码执行一段可执行代码(executable code)时，会创建对应的执行上下文(execution context)
+ 
+对于每个执行上下文，都有三个重要属性：
 
+- 变量对象(Variable object，VO)
 
-It contains the ```variables```, ```function declarations```, ```arguments```, ```scope chain```, ```this``` and other information in the current execution environment
+- 作用域链(Scope chain)
+
+- this
 
 ### 分类
 
@@ -39,7 +54,11 @@ Whenever a function is called, a new context will be created for this function
 
 开发者并不经常使用 eval，所以在这里不再讨论
 
-### Execution stack
+---
+
+<span id="jump2"></span>
+
+## Execution stack
 
 Also known as “call stack” 
 
@@ -53,41 +72,17 @@ Whenever the engine encounters a function call, it creates a new execution conte
 
 The engine will execute those functions whose execution context is at the top of the stack. When the execution of the function ends, the execution context is popped from the stack, and the control flow reaches the next context in the current stack
 
-### Life Cycle
+---
 
-The life cycle of the execution context: create -> execute -> recycle
+<span id="jump3"></span>
 
-#### The Creation Phase
+## 变量对象
 
-##### Create Variable Object
 
-Initialize parameters of the function
-
-Function declaration lift
-
-Variable lift
-
-- The assignment part in the declaration statement will not be lifted, only the name will be lifted
-
-- If the function has multiple parameters with the same name, the last parameter (even if it is not defined) will override the previous one
-
-- The priority of function declaration is higher than variable. If the variable name is the same as the function name and is not assigned, the function declaration will overwrite the variable declaration
-
-##### Creact Scope Chain
-
-##### Determine what ```this``` will point at 
-
-#### Execution phase
-
-Perform variable assignment, function reference, and other code execution
-
-#### recycle phase
-
-The execution context is popped out of the stack and recycled by the garbage collection mechanism
 
 ---
 
-<span id="jump2"></span>
+<span id="jump4"></span>
 
 ## Scope
 
@@ -115,7 +110,7 @@ Generally speaking, the following situations have global scope:
 
 ### Function scope
 
-Scope of variables declared inside the function
+因为 JavaScript 采用的是词法作用域，函数的作用域在函数定义的时候就决定了
 
 ```注意：```块语句（大括号“｛｝”中间的语句），如 if 条件语句或 for 循环语句，不会创建一个新的作用域
 
@@ -147,76 +142,201 @@ The declared variable cannot be accessed outside the scope of the specified bloc
 
 ---
 
-<span id="jump3"></span>
+<span id="jump5"></span>
 
 ## Scope Chain
 
-### Free variable
+### 定义
 
-Variables that are not defined in the current scope are called ```free variables```
+当查找变量的时候，会先从当前上下文的变量对象中查找，如果没有找到，就会从父级(词法层面上的父级)执行上下文的变量对象中查找，一直找到全局上下文的变量对象，也就是全局对象。这样由多个执行上下文的变量对象构成的链表就叫做作用域链
 
-```javascript
-var a = 100
-function fn() {
-    var b = 200
-    console.log(a) // 这里的a在这里就是一个自由变量
-    console.log(b)
-}
-fn()
-```
+### 作用域链的创建过程
 
-### Scope Chain
+一个函数的作用域链的创建分为函数的创建和激活两个时期
 
-Is the process of finding the value of a free variable, argument or function
+#### 函数创建时期
 
-The JS engine scans for the value of the variable, argument or function layer by layer until it reaches the global scope. If it still does not find it, then gives up
+函数有一个内部属性 [[scope]]，当函数创建的时候，就会保存所有父AO到其中
 
-This layer-by-layer relationship is the scope chain
-
-### About the value of free variables
-
-Go to the scope where the ```fn``` function was created, no matter where the ```fn``` function will be called
-
-例1：
+例如：
 
 ```javascript
-var x = 10
-function fn() {
-  console.log(x)
+function foo() {
+    function bar() {
+        ...
+    }
 }
-function show(f) {
-  var x = 20
-  (function() {
-    f() // 10，而不是20
-  })()
-}
-
-show(fn)
 ```
 
-例2：
+函数创建时，各自的[[scope]]为：
 
 ```javascript
-var a = 10
-function fn() {
-  var b = 20
-  function bar() {
-    console.log(a + b) // 30
-  }
-  return bar
-}
+foo.[[scope]] = [
+  globalContext.VO
+];
 
-var x = fn(),
-  b = 200
-x() 
+bar.[[scope]] = [
+    fooContext.AO,
+    globalContext.VO
+];
 ```
 
-分析：
+#### 函数激活时期
 
-fn()返回的是bar函数，执行x()，即执行bar函数代码
+当函数激活时，进入函数上下文，创建 VO/AO 后，就会将活动对象添加到作用链的前端
 
-因此取b的值时，直接在fn作用域取
+这时候执行上下文的作用域链，我们命名为 Scope：
 
-取a的值时，试图在fn作用域取，但是取不到，只能转向创建fn的那个作用域中去查找
+```javascript
+Scope = [AO].concat([[Scope]]);
+```
 
-所以最后的结果是30
+至此，作用域链创建完毕
+
+---
+
+<span id="jump7"></span>
+
+## JS程序执行的流程
+
+以一段代码为例：
+
+```javascript
+var scope = "global scope";
+function checkscope(){
+    var scope2 = 'local scope';
+    return scope2;
+}
+checkscope();
+```
+
+### 创建全局执行上下文
+
+JS执行全局代码，创建全局执行上下文
+
+全局上下文被压入执行上下文栈
+
+```javascript
+ECStack = [
+  globalContext
+];
+```
+
+### 全局上下文初始化
+
+```javascript
+globalContext = {
+  VO: [global],
+  Scope: [globalContext.VO],
+  this: globalContext.VO
+}
+```
+
+### 保存函数作用域链
+
+初始化的同时，checkscope 函数被创建
+
+作用域链被保存到函数的内部属性[[scope]]
+
+```javascript
+checkscope.[[scope]] = [
+  globalContext.VO
+];
+```
+
+### 创建函数执行上下文
+
+创建 checkscope 函数执行上下文
+
+checkscope 函数执行上下文被压入执行上下文栈
+
+```javascript
+ECStack = [
+  checkscopeContext,
+  globalContext
+];
+```
+
+### 复制作用域链
+
+复制函数[[scope]]属性创建作用域链
+
+```javascript
+checkscopeContext = {
+    Scope: checkscope.[[scope]],
+}
+```
+
+### 创建活动对象
+
+用 arguments 创建活动对象
+
+初始化活动对象，即加入形参、函数声明、变量声明
+
+```javascript
+checkscopeContext = {
+    AO: {
+        arguments: {
+            length: 0
+        },
+        scope2: undefined
+    }，
+    Scope: checkscope.[[scope]],
+}
+```
+
+### 更新作用域链
+
+将活动对象压入 checkscope 作用域链顶端
+
+```javascript
+checkscopeContext = {
+    AO: {
+        arguments: {
+            length: 0
+        },
+        scope2: undefined
+    },
+    Scope: [AO, [[Scope]]]
+}
+```
+
+### 执行函数
+
+随着函数的执行，修改 AO 的属性值
+
+```javascript
+checkscopeContext = {
+    AO: {
+        arguments: {
+            length: 0
+        },
+        scope2: 'local scope'
+    },
+    Scope: [AO, [[Scope]]]
+}
+```
+
+### 查找自由变量的值
+
+沿着作用域链查找 scope2 值，在AO中找到
+
+return
+
+### 函数执行完毕
+
+checkscope 函数执行完毕，checkscope 执行上下文从执行上下文栈中弹出
+
+```javascript
+ECStack = [
+  globalContext
+];
+```
+
+### 程序结束
+
+全局执行上下文从执行上下文栈中弹出
+
+```javascript
+ECStack = [];
+```
