--- a/函数.md
+++ b/函数.md
@@ -78,7 +78,127 @@ The engine will execute those functions whose execution context is at the top of
 
 ## 变量对象
 
+### 定义
 
+变量对象中存储了在执行上下文中定义的变量和函数声明
+
+全局上下文下的变量对象和函数上下文下的变量对象稍有不同
+
+### 全局上下文中
+
+全局上下文中的变量对象就是全局对象
+
+全局对象是预定义的对象，作为 JavaScript 的全局函数和全局属性的占位符。通过使用全局对象，可以访问所有其他所有预定义的对象、函数和属性
+
+在顶层 JavaScript 代码中，可以用关键字 this 引用全局对象，在客户端 JavaScript 中，全局对象就是 Window 对象
+
+### 函数上下文中
+
+#### 活动对象
+
+未进入执行阶段之前，变量对象(VO)中的属性都不能访问
+
+进入执行阶段之后， VO被激活，里面的属性都能被访问了
+
+同时，函数执行时传入的参数和 arguments也被添加到VO中
+
+因此，AO = VO + function parameters + arguments
+
+### 活动对象的初始化
+
+活动对象是在进入函数上下文时刻被创建的
+
+它通过函数的 arguments 属性初始化
+
+arguments 属性值是 Arguments 对象
+
+### 变量对象的赋值
+
+变量对象的赋值会分成两个阶段进行处理：
+
+- 进入执行上下文阶段：为变量对象的属性值赋初始值
+
+- 代码执行：根据执行结果，更新变量对象的属性值
+
+### 进入执行上下文阶段
+
+当进入执行上下文时，这时候还没有执行代码，变量对象会包括：
+
+- 函数的所有形参 (如果是函数上下文)
+
+	- 由名称和对应值（实参传递过来的值）组成的一个变量对象的属性被创建
+
+	- 如果没有实参，则属性值被设为 undefined
+
+- 函数声明
+
+	- 由名称和对应值（函数对象(function-object)）组成一个变量对象的属性被创建
+
+	- 如果变量对象已经存在相同名称的属性，则完全替换这个属性
+
+- 变量声明
+
+	- 由名称和对应值（undefined）组成一个变量对象的属性被创建
+
+	- 如果变量名称跟已经声明的形式参数或函数相同，则变量声明不会干扰已经存在的这类属性
+
+例如：
+
+```javascript
+function foo(a) {
+  var b = 2;
+  function c() {}
+  var d = function() {};
+
+  b = 3;
+}
+
+foo(1);
+```
+
+在进入执行上下文后，这时候的 AO 是：
+
+```javascript
+AO = {
+    arguments: {
+        0: 1,
+        length: 1
+    },
+    a: 1,
+    b: undefined,
+    c: reference to function c(){},
+    d: undefined
+}
+```
+
+### 代码执行阶段
+
+在代码执行阶段，会顺序执行代码，根据代码，修改变量对象的值
+
+还是上面的例子，当代码执行完后，这时候的 AO 是：
+
+```javascript
+AO = {
+    arguments: {
+        0: 1,
+        length: 1
+    },
+    a: 1,
+    b: 3,
+    c: reference to function c(){},
+    d: reference to FunctionExpression "d"
+}
+```
+
+### 总结
+
+- 全局上下文的变量对象初始化是全局对象
+
+- 函数上下文的变量对象初始化只包括 Arguments 对象
+
+- 在进入执行上下文时会给变量对象添加形参、函数声明、变量声明等初始的属性值
+
+- 在代码执行阶段，会再次修改变量对象的属性值
 
 ---
 
@@ -195,9 +315,120 @@ Scope = [AO].concat([[Scope]]);
 
 ---
 
+<span id="jump6"></span>
+
+## this
+
+从ECMAScript规范的角度，this的值由以下规则决定：
+
+```
+1. 计算 MemberExpression 的结果赋值给 ref
+
+2. 判断 ref 是不是一个 Reference 类型
+
+	2.1 如果 ref 是 Reference，并且 IsPropertyReference(ref) 是 true, 那么 this 的值为 GetBase(ref)
+	
+	2.2 如果 ref 是 Reference，并且 base value 值是 Environment Record, 那么this的值为 ImplicitThisValue(ref)
+	
+	2.3 如果 ref 不是 Reference，那么 this 的值为 undefined
+```
+
+下面将给出上述规则中出现的一些名词的含义
+
+### MemberExpression
+
+MemberExpression 就是()左边的部分，例如：
+
+```javascript
+function foo() {
+    return function() {
+        console.log(this)
+    }
+}
+
+foo()(); // MemberExpression 是 foo()
+```
+
+### 判断 ref 是不是一个 Reference 类型
+
+只能根据MemberExpression的类型，查阅ECMAScript规范才能知道，比较麻烦
+
+### Reference
+
+Reference 类型就是用来解释诸如 delete、typeof 以及赋值等操作行为的
+
+是 “只存在于规范里的抽象类型”，它们是为了更好地描述语言的底层行为逻辑才存在的，但并不存在于实际的 js 代码中
+
+Reference由三个组成部分，分别是：
+
+- base value
+
+	就是属性所在的对象或者就是 EnvironmentRecord，只可能是 undefined, an Object, a Boolean, a String, a Number, 和 an environment record 中的一种
+
+- referenced name
+
+	就是属性的名称
+
+- strict reference
+
+	是否严格模式
+
+例如：
+
+```javascript
+var foo = {
+    bar: function () {
+        return this;
+    }
+};
+ 
+foo.bar();
+
+// bar对应的Reference是：
+var BarReference = {
+    base: foo,
+    propertyName: 'bar',
+    strict: false
+};
+```
+
+### GetBase
+
+GetBase返回 reference 的 base value
+
+### IsPropertyReference
+
+如果 base value 是一个对象，就返回true
+
+### GetValue
+
+返回对象属性真正的值
+
+**注意：**返回的将是具体的值，而不再是一个 Reference
+
+例如：
+
+```javascript
+var foo = 1;
+
+var fooReference = {
+    base: EnvironmentRecord,
+    name: 'foo',
+    strict: false
+};
+
+GetValue(fooReference) // 1;
+```
+
+---
+
 <span id="jump7"></span>
 
 ## JS程序执行的流程
+
+一个函数的生命周期如下：
+
+函数被创建 ——> 保存父作用域链到[[scope]] ——> 创建EC ——> EC被压入ECS ——> EC初始化 ——> 复制[[scope]]到Scope ——> 创建AO ——> AO被压入Scope ——> 执行函数 ——> 根据Scope查找变量的值 ——> 更新AO ——> 函数执行完毕EC被弹出ECS 
 
 以一段代码为例：
 
@@ -236,7 +467,7 @@ globalContext = {
 
 初始化的同时，checkscope 函数被创建
 
-作用域链被保存到函数的内部属性[[scope]]
+父作用域链被保存到函数的内部属性[[scope]]
 
 ```javascript
 checkscope.[[scope]] = [
@@ -303,7 +534,7 @@ checkscopeContext = {
 
 ### 执行函数
 
-随着函数的执行，修改 AO 的属性值
+随着函数的执行，更新 AO 的属性值
 
 ```javascript
 checkscopeContext = {
