--- a/闭包.md
+++ b/闭包.md
@@ -16,20 +16,51 @@
 
 ## 概念
 
-闭包就是由函数创造的一个词法作用域，里面创建的变量被引用后，可以在这个词法环境之外自由使用
+### MDN 对闭包的定义为：
 
-更通俗地说，当一个函数能够读取其他函数的内部变量，就发生了闭包
+  闭包是指那些能够访问自由变量的函数
+
+### 那什么是自由变量呢？
+
+  自由变量是指在函数中使用的，但既不是函数参数也不是函数的局部变量的变量
+
+### 由此，我们可以看出闭包共有两部分组成：
+
+  闭包 = 函数 + 函数能够访问的自由变量
+
+### 举个例子
 
 ```javascript
-let a = 1
-let b = function(){
-    console.log(a)
+var a = 1;
+
+function foo() {
+    console.log(a);
 }
+
+foo();
 ```
 
-在这个例子里函数b因为捕获了外部作用域（环境）中的变量a，因此形成了闭包
+foo 函数可以访问变量 a，但是 a 既不是 foo 函数的局部变量，也不是 foo 函数的参数，所以 a 就是自由变量
 
-而由于变量a并不属于函数b，所以在概念里被称之为「自由变量」
+那么，函数 foo + foo 函数访问的自由变量 a 就构成了一个闭包
+
+### 理论与实践
+
+#### 从理论角度
+
+所有的函数都是闭包
+
+哪怕是简单的全局变量也是如此，因为函数中访问全局变量就相当于是在访问自由变量
+
+#### 从实践角度
+
+以下函数才算是闭包：
+
+- 即使创建它的上下文已经销毁，它仍然存在（比如，内部函数从父函数中返回）
+
+- 在代码中引用了自由变量
+
+**重点关注实践上的闭包**
 
 ---
 
@@ -88,116 +119,105 @@ result(); // 1000
 
 ## 闭包的原理
 
-### Scope
+### 一句话概括
 
-每一个函数都有一个隐藏的属性[[Scope]]，这个属性保存着函数的作用域链，它本质上是一个集合
+当父函数的执行上下文还被子函数的作用域链引用着，那么只要子函数还存，垃圾收集器就不会销毁它，即便父函数此时已被销毁
 
-### 当一个函数没有父函数
-
-#### 创建函数时
-
-[[Scope]]属性的第一个值会引用当前的全局上下文
-
-所有全局变量及其存储的数据都在这个集合里
+### 例子1
 
 ```javascript
-[
-(Global Context)
-]
+var scope = "global scope";
+function checkscope(){
+  var scope = "local scope";
+  function f(){
+    return scope;
+  }
+  return f;
+}
+
+var foo = checkscope();
+foo();
 ```
 
-#### 调用函数时
+#### 这段代码中执行上下文栈和执行上下文的变化情况：
 
-当一个函数被调用的时候，会创建一个Execute context，即运行时上下文
+  - 进入全局代码，创建全局执行上下文，全局执行上下文压入执行上下文栈
 
-它存储调用该函数的对象，函数的参数数组，函数的局部变量（值还未定义）
+  - 全局执行上下文初始化
 
-该集合会被压入[[Scope]]属性，此时[[Scope]]属性如下：
+  - 执行 checkscope 函数，创建 checkscope 函数执行上下文，checkscope 执行上下文被压入执行上下文栈
+
+  - checkscope 执行上下文初始化，创建变量对象、作用域链、this等
+
+  - checkscope 函数执行完毕，checkscope 执行上下文从执行上下文栈中弹出
+
+  - 执行 f 函数，创建 f 函数执行上下文，f 执行上下文被压入执行上下文栈
+
+  - f 执行上下文初始化，创建变量对象、作用域链、this等
+
+  - f 函数执行完毕，f 函数上下文从执行上下文栈中弹出
+
+#### 当我们了解了具体的执行过程后，我们知道 f 执行上下文维护了一个作用域链：
 
 ```javascript
-[
-(Execute context),
-(Global Context)
-]
+fContext = {
+  Scope: [AO, checkscopeContext.AO, globalContext.VO],
+}
 ```
 
-#### 函数return时
+就是因为这个作用域链，f 函数依然可以读取到 checkscopeContext.AO 的值，说明当 f 函数引用了 checkscopeContext.AO 中的值的时候，即使 checkscopeContext 被销毁了，但是 JavaScript 依然会让 checkscopeContext.AO 活在内存中，f 函数依然可以通过 f 函数的作用域链找到它，正是因为 JavaScript 做到了这一点，从而实现了闭包这个概念
 
-引擎只是去除[[Scope]]属性中对运行时上下文的引用，并没有立即销毁它
-
-此时运行时上下文没有任何引用了，在将来的某个时刻会被垃圾收集器销毁
-
-此时[[Scope]]属性如下：
+### 例子2
 
 ```javascript
-[
-(Global Context)
-]
+var data = [];
+
+for (var i = 0; i < 3; i++) {
+  data[i] = (function (i) {
+    return function(){
+      console.log(i);
+    }
+  })(i);
+}
+
+data[0]();
+data[1]();
+data[2]();
 ```
 
-### 如果一个函数创建的时候存在父函数
-
-#### 创建函数时
-
-当一个子函数被创建时，显然，这个创建是父函数的执行导致的
-
-所以当子函数创建时，父函数已经处于执行阶段，所以父函数的执行上下文已经创建了
-
-子函数在创建的时候，除了要引用全局上下文，也需要引用父函数的执行上下文
-
-否则子函数就无法访问父函数的局部变量，违背了设计的要求
-
-此时两个函数的[[Scope]]属性如下：
-
-父函数：
+当执行到 data[0] 函数之前，此时全局上下文的 VO 为：
 
 ```javascript
-[
-(Father Execute Context),
-(Global Context)
-]
+globalContext = {
+  VO: {
+    data: [...],
+    i: 3
+  }
+}
 ```
 
-子函数：
+当执行 data[0] 函数的时候，data[0] 函数的作用域链发生了改变：
 
 ```javascript
-[
-(Father Execute Context), // 这里引用的是父函数的执行上下文，自身的执行上下文此时还未创建。
-(Global Context)
-]
+data[0]Context = {
+  Scope: [AO, 匿名函数Context.AO globalContext.VO]
+}
 ```
 
-#### 调用函数时
-
-当一个子函数执行时，因为它同样是函数，所以它同样需要创建自己的执行上下文
-
-此时子函数的[[Scope]]属性如下：
+匿名函数执行上下文的AO为：
 
 ```javascript
-[
-(Child Execute Context), // 这是子函数自己的执行上下文
-(Father Execute Context), // 这里引用的是父函数的执行上下文
-(Global Context)
-]
+匿名函数Context = {
+  AO: {
+    arguments: {
+      0: 0,
+      length: 1
+    },
+    i: 0
+  }
+}
 ```
 
-#### 函数return时
+data[0]Context 的 AO 并没有 i 值，所以会沿着作用域链从匿名函数 Context.AO 中查找，这时候就会找 i 为 0，找到了就不会往 globalContext.VO 中查找了，即使 globalContext.VO 也有 i 的值(值为3)，所以打印的结果就是0
 
-只解除[[Scope]]属性中对自身执行上下文的引用，对父函数的执行上下文的引用并没有解除
-
-此时子函数的[[Scope]]属性如下：
-
-```javascript
-[
-(Father Execute Context), // 这里引用的是父函数的执行上下文
-(Global Context)
-]
-```
-
-### 所以，为什么父函数的局部变量没有被销毁？
-
-因为它们所在的执行上下文还被子函数的[[Scope]]属性引用着
-
-只要子函数还存在引用，垃圾收集器就不会销毁它们所在的执行上下文
-
-因为父函数的局部变量并不在全局上下文中，所以它只能在子函数的变量解析中被访问，自然而然就相当于它们是子函数私有的了
+data[1] 和 data[2] 是一样的道理
