--- a/函数.md
+++ b/函数.md
@@ -200,6 +200,12 @@ AO = {
 
 - 在代码执行阶段，会再次修改变量对象的属性值
 
+### 实际应用中需要注意的点
+
+- 当一个函数顺着作用域链寻找某个变量时，它拿到的是一个属性值而不是引用
+
+- 由于只有在执行函数时才会更新变量对象的属性值，因此除非是函数自己的函数作用域内变量，否则沿作用域链找到的变量的值将是该作用域链创建时的值，而不是找到时的值（闭包）
+
 ---
 
 <span id="jump4"></span>
