--- a/变量类型和类型转换.md
+++ b/变量类型和类型转换.md
@@ -14,6 +14,8 @@
 
 [Object.prototype.toString](#jump6)
 
+[赋值](#jump7)
+
 ---	
 
 <span id="jump1"></span>
@@ -432,3 +434,57 @@ toString.call(null); //[object Null]
 所以采用 obj.toString()不能得到其对象类型，只能将 obj 转换为字符串类型
 
 在想要得到对象的具体类型时，应该调用 Object 上原型 toString 方法
+
+---
+
+<span id="jump7"></span>
+
+## 赋值
+
+### 基本数据类型
+
+当基本类型的数据赋值时，赋得是实际的值
+
+a和b是没有关联关系的，b由a复制得到，相互独立
+
+### 引用数据类型
+
+对象使用的是引用赋值。当我们把一个对象赋值给一个新的变量时，赋的其实是该对象的在堆中的地址，而不是堆中的数据
+
+也就是两个对象指向的是同一个存储空间，无论哪个对象发生改变，其实都是改变的存储空间的内容，因此，两个对象是联动的
+
+### 参数传递
+
+#### 基本数据类型
+
+当传入的是基本类型的参数时：
+
+```javascript
+function setAge(i){
+  alert(i);//24
+  i = 18;
+  alert(i);//18,i的改变不会影响外面的age
+};
+ 
+var age = 24;
+setAge(age);
+alert(age);//24
+```
+
+就是复制了份内容给i而已，i与age之间没有关系
+
+#### 引用数据类型
+
+当传入的参数为引用类型时：
+
+```javascript
+function setName(obj){
+  obj.name = 'haha';
+};
+ 
+var obj2 = new Object();
+setName(obj2);
+alert(obj2.name);    //  haha
+```
+
+这看起来很像是传递的是引用，因为obj.name受到改变了，但其实不是，其实还是值，因为obj2本身的值就是新对象的地址，所以传进去的就是这个地址
