Update and rename 修改元素.md to 元素属性的获取、设置.md

--- a/元素属性的获取、设置.md
+++ b/元素属性的获取、设置.md
@@ -16,9 +16,7 @@
 
 [移除属性值](#jump7)
 
-[移除属性值](#jump8)
-
-[自定义属性命名规范](#jump9)
+[自定义属性命名规范](#jump8)
 
 ---	
 
@@ -74,48 +72,58 @@ type, value, checked, selected, disabled
 
 <span id="jump5"></span>
 
-## 样式属性操作
+## 获取属性值
 
-当要修改的内容较少时使用
+### 通过DOM节点的 style 样式获取
+
+只能获取行内样式，不能获取内嵌的样式和外链的样式
 
 ```javascript
-元素.style
+element.style.属性
 ```
 
-定义一个类里面写要改成的内容，这样相同的改变就可以通过改变类名来实现
+### 通用型（获取全部属性）
 
 ```javascript
-元素.className 
+window.getComputedStyle("元素", "伪类");
+```
+
+### 通用型（获取单个属性）
+
+```javascript
+window.getComputedStyle("元素", "伪类").getPropertyValue(属性);
+```
+
+### 获取自定义属性
+
+```javascript
+element.getAttribute('属性') 
+```
+
+### 仅获取宽/高
+
+```javascript
+element.getBoundingClientRect().属性;
+```
+
+### IE特有
+
+```javascript
+element.currentStyle.width/height;
 ```
 
 ---
 
 <span id="jump6"></span>
 
-## 获取属性值
-
-获取内置属性
-
-```javascript
-element.属性
-```
-
-获取自定义属性
-
-```javascript
-element.getAttribute('属性') 
-```
-
----
-
-<span id="jump7"></span>
-
 ## 设置属性值
 
-设置内置属性
+### 可实现设置的方法
+
+通过DOM节点的 style 样式：
 
 ```javascript
-element.属性 = '值' 
+element.style.属性 = '值' 
 ```
 
 设置自定义属性
@@ -125,19 +133,45 @@ element.setAttribute('属性', '值')
 
 ```
 
+### 设置方式的区别
+
+#### 当需要修改的内容较多时
+
+将需要添加的样式写到一个类里面，然后为目标元素添加这个类：
+
+```javascript
+元素.classList.add("类名");
+```
+
+#### 当要修改的内容较少时
+
+```javascript
+元素.style.属性 = "值";
+```
+
+但此方法性能不如添加类
+
 ---
 
-<span id="jump8"></span>
+<span id="jump7"></span>
 
 ## 移除属性值
+
+### 直接移除
 
 ```javascript
 element.removeAttibute('属性值')
 ```
 
+### 通过移除类来移除
+
+```javascript
+element.classList.remove('属性值')
+```
+
 ---
 
-<span id="jump9"></span>
+<span id="jump8"></span>
 
 ## 自定义属性命名规范
 
