--- a/常用拼接、截取方法.md
+++ b/常用拼接、截取方法.md
@@ -44,6 +44,10 @@
 
 [slice](#jump13)
 
+#### 一些技巧
+
+[使用负数作为位置参数](#jump14)
+
 ---	
 
 <span id="jump1"></span>
@@ -365,3 +369,19 @@ var str="Hello world!";
 var n=str.slice(1,5);
 // n 输出结果：ello
 ```
+
+---
+
+<span id="jump14"></span>
+
+## 使用负数作为位置参数
+
+则表示从字符串尾部开始算起的位置
+
+例如：
+
+```javascript
+str.slice(-5,-1)
+```
+
+截取位置为：从倒数第五个字符到倒数第一个字符
