--- a/元素属性的获取、设置.md
+++ b/元素属性的获取、设置.md
@@ -82,16 +82,16 @@ type, value, checked, selected, disabled
 element.style.属性
 ```
 
-### 通用型（获取全部属性）
+### 通用型（获取全部属性的集合）
 
 ```javascript
-window.getComputedStyle("元素", "伪类");
+window.getComputedStyle("DOM元素", "伪类");
 ```
 
 ### 通用型（获取单个属性）
 
 ```javascript
-window.getComputedStyle("元素", "伪类").getPropertyValue(属性);
+window.getComputedStyle("DOM元素", "伪类")[字符串类型的属性名];
 ```
 
 ### 获取自定义属性
