--- a/常用拼接、截取方法.md
+++ b/常用拼接、截取方法.md
@@ -6,29 +6,31 @@
 
 #### 数组方法
 
-[concat](#jump1)
+[copyWithin](#jump1)
 
-[copyWithin](#jump2)
+[fill](#jump2)
 
-[fill](#jump3)
+[join](#jump3)
 
-[join](#jump4)
+[push](#jum4)
 
-[push](#jump5)
+[unshift](#jump5)
 
-[unshift](#jump6)
-
-[splice（指定位置插入）](#jump8)
+[splice（指定位置插入）](#jump6)
 
 #### 字符串方法
 
 [repeat](#jump7)
 
+#### 数组，字符串均适用
+
+[concat](#jump8)
+
 ### 截取
 
 #### 数组方法
 
-[splice](#jump8)
+[splice](#jump6)
 
 #### 字符串方法
 
@@ -40,44 +42,23 @@
 
 [trim](#jump12)
 
-#### 通用方法
+#### 数组，字符串均适用
 
 [slice](#jump13)
 
+### 替换
+
+#### 字符串
+
+[replace](#jump14)
+
 ### 一些技巧
 
-[使用负数作为位置参数](#jump14)
-
----	
-
-<span id="jump1"></span>
-
-## concat
-
-- 适用于数组、字符串对象
-
-- 用于连接两个或多个对象
-
-- 不会改变现有的对象，而仅仅会返回被连接对象的一个副本
-
-语法：
-
-```javascript
-array1.concat(array2,array3,...,arrayX)
-```
-
-例子：
-
-```javascript
-var hege = ["Cecilie", "Lone"];
-var stale = ["Emil", "Tobias", "Linus"];
-var kai = ["Robin"];
-var children = hege.concat(stale,kai); // children中的元素为Cecilie,Lone,Emil,Tobias,Linus,Robin
-```
+[使用负数作为位置参数](#jump15)
 
 ---
 
-<span id="jump2"></span>
+<span id="jump1"></span>
 
 ## copyWithin
 
@@ -98,7 +79,7 @@ fruits.copyWithin(2, 0); // fruits中变为Banana,Orange,Banana,Orange
 
 ---
 
-<span id="jump3"></span>
+<span id="jump2"></span>
 
 ## fill
 
@@ -119,7 +100,7 @@ fruits.fill("Runoob"); // fruits中所有元素均被换成Runoob
 
 ---
 
-<span id="jump4"></span>
+<span id="jump3"></span>
 
 ## join
 
@@ -144,7 +125,7 @@ var energy = fruits.join(); // energy是一个内容为：Banana,Orange,Apple,Ma
 
 ---
 
-<span id="jump5"></span>
+<span id="jump4"></span>
 
 ## push
 
@@ -169,7 +150,7 @@ fruits.push("Kiwi")
 
 ---
 
-<span id="jump6"></span>
+<span id="jump5"></span>
 
 ## unshift
 
@@ -179,28 +160,7 @@ fruits.push("Kiwi")
 
 ---
 
-<span id="jump7"></span>
-
-## repeat
-
-字符串复制指定次数
-
-语法：
-
-```javascript
-string.repeat(count)
-```
-
-例子：
-
-```javascript
-var str = "Runoob";
-str.repeat(2); // n 输出结果: RunoobRunoob
-```
-
----
-
-<span id="jump8"></span>
+<span id="jump6"></span>
 
 ## splice
 
@@ -230,7 +190,55 @@ fruits.splice(2,0,"Lemon","Kiwi");
 
 ---
 
-<span id="jump9"></span>
+<span id="jump7"></span>
+
+## repeat
+
+字符串复制指定次数
+
+语法：
+
+```javascript
+string.repeat(count)
+```
+
+例子：
+
+```javascript
+var str = "Runoob";
+str.repeat(2); // n 输出结果: RunoobRunoob
+```
+
+---	
+
+<span id="jump8"></span>
+
+## concat
+
+- 适用于数组、字符串对象
+
+- 用于连接两个或多个对象
+
+- 不会改变现有的对象，而仅仅会返回被连接对象的一个副本
+
+语法：
+
+```javascript
+array1.concat(array2,array3,...,arrayX)
+```
+
+例子：
+
+```javascript
+var hege = ["Cecilie", "Lone"];
+var stale = ["Emil", "Tobias", "Linus"];
+var kai = ["Robin"];
+var children = hege.concat(stale,kai); // children中的元素为Cecilie,Lone,Emil,Tobias,Linus,Robin
+```
+
+---
+
+<span id="jump8"></span>
 
 ## split
 
@@ -373,6 +381,37 @@ var n=str.slice(1,5);
 ---
 
 <span id="jump14"></span>
+
+## replace
+
+replace() 方法用于在字符串中用一些字符替换另一些字符，或替换一个与正则表达式匹配的子串
+
+语法：
+
+```javascript
+stringObject.replace(regexp/substr,replacement)
+```
+
+| 参数 | 描述 |
+| --- | --- |
+| regexp/substr | 规定子字符串或要替换的模式的 RegExp 对象 |
+| replacement | 规定了替换文本或生成替换文本的函数 |
+
+返回值：
+
+一个新的字符串，是用 replacement 替换了 regexp 的第一次匹配或所有匹配之后得到的
+
+例子：
+
+```javascript
+let str="Visit Microsoft!";
+console.log(str.replace(/Microsoft/, "W3School"));
+// 打印结果：Visit W3School!
+```
+
+---
+
+<span id="jump15"></span>
 
 ## 使用负数作为位置参数
 
