--- a/各种距离.md
+++ b/各种距离.md
@@ -8,7 +8,9 @@
 
 [鼠标指针的距离](#jump3)
 
-[window的距离](#jump4)
+[页面的距离](#jump4)
+
+[window的距离](#jump5)
 
 ---
 
@@ -79,6 +81,18 @@ screenX、screenY：相对于用户显示器屏幕左上角的X,Y坐标。标准
 ---
 
 <span id="jump4"></span>
+
+## 页面的距离
+
+document.documentElement.clientHeight：获取浏览器布局视口高度，包括内边距，但不包括垂直滚动条、边框和外边距
+
+document.documentElement.offsetHeight：包括内边距、滚动条、边框和外边距
+
+document.documentElement.scrollHeight：在不使用滚动条的情况下适合视口中的所有内容所需的最小宽度。测量方式与 clientHeight相同：它包含元素的内边距，但不包括边框，外边距或垂直滚动条
+
+---
+
+<span id="jump5"></span>
 
 ## window的距离
 
