--- a/常用拼接、截取方法.md
+++ b/常用拼接、截取方法.md
@@ -32,6 +32,10 @@
 
 [splice](#jump6)
 
+[shift](#shift)
+
+[pop](#pop)
+
 #### 字符串方法
 
 [split](#jump9)
@@ -186,6 +190,42 @@ array.splice(index,howmany,item1,.....,itemX)
 var fruits = ["Banana", "Orange", "Apple", "Mango"];
 fruits.splice(2,0,"Lemon","Kiwi");
 // fruits 输出结果： Banana,Orange,Lemon,Kiwi,Apple,Mango
+```
+
+---
+
+<span id="shift"></span>
+
+## shift
+
+- 于把数组的第一个元素从其中删除
+
+- 返回值： 被删除的元素（即数组原来的第一个元素的值）
+
+- 该方法不创建新数组，而是直接修改原有的 array
+
+- 如果数组是空的，那么 shift() 方法将不进行任何操作，返回 undefined 值
+
+```javascript
+array.shift();
+```
+
+---
+
+<span id="pop"></span>
+
+## pop
+
+- 用于把数组的第一个元素从其中删除
+
+- 返回值： 被删除的元素（即数组原来的最后一个元素的值）
+
+- 该方法不创建新数组，而是直接修改原有的 array
+
+- 如果数组是空的，那么 shift() 方法将不进行任何操作，返回 undefined 值
+
+```javascript
+array.pop();
 ```
 
 ---
