--- a/常用拼接、截取方法.md
+++ b/常用拼接、截取方法.md
@@ -198,7 +198,7 @@ fruits.splice(2,0,"Lemon","Kiwi");
 
 ## shift
 
-- 于把数组的第一个元素从其中删除
+- 用于把数组的第一个元素从其中删除
 
 - 返回值： 被删除的元素（即数组原来的第一个元素的值）
 
@@ -455,7 +455,7 @@ console.log(str.replace(/Microsoft/, "W3School"));
 
 ## 使用负数作为位置参数
 
-则表示从字符串尾部开始算起的位置
+表示从字符串尾部开始算起的位置
 
 例如：
 
