--- a/常用遍历方法.md
+++ b/常用遍历方法.md
@@ -346,18 +346,19 @@ var n=str.search("Runoob"); // n 输出结果：6
 
 ## for in
 
-- for...in...主要用于遍历对象的，不适用于遍历数组
+- for ... in是为遍历有key-value数据（比如属性用作“键”）的对象属性而构建的，不建议与数组一起使用
 
 ```javascript
-let obj = {
-    name: "zs",
-    age: "18",
-    gender: "male"
+let obj = {a:1, b:2, c:3};
+
+for (let prop in obj) {
+  console.log("obj." + prop + " = " + obj[prop]);
 }
 
-for (key in obj) {
-    console.log("key：" + key + ";value:" + obj[key])
-}
+// Output:
+// "obj.a = 1"
+// "obj.b = 2"
+// "obj.c = 3"
 ```
 
 ---
